This is the changelog for developers, != changelog for the end user 
that we distribute with the binaries. (see changelog)


03/10/2006
namespace
- Fix for Bug 1113 (Topsun)
  (http://zerowing.idsoftware.com/bugzilla/show_bug.cgi?id=1113)

03/10/2006
namespace
- Changed ETB tag toolbar to a notebook with tag/texture pages (Shaderman)
- Added a context menu (add/delete/rename tag) to the ETB tag tree view (Shaderman)
- Added new win32 installer HOWTO (Shaderman/Topsun)

01/10/2006
namespace
- Added missing xml files for win32 installer

30/09/2006
namespace
- Fixed Etb saving custom tags to global tagfile (Shaderman/namespace)
- Fixed postbuild step for brushexport, shaderplug and sunplug (Shaderman)
- Added installersupport for new files and plugins (Shaderman)

30/09/2006
namespace
- Added LocalLcPath to plugin interface
- Added enhanced Texturebrowser (ETB) by Shaderman
- Added shaderplug by Shaderman, accompanies the ETB
- Added xmltagging lib by Shaderman, accompanies the ETB
- Added new icons for ETB, Console, Entityinspector and Lighteditor
- Fixed minor warning in Sunplug Project
- Fixed PATH_MAX namecollision in ptrview plugin on Linux
- Final fix for 64 bit patch.h issue



12/09/2006
namespace
- Fixed 64 Bit issue in patch.h, see http://zerowing.idsoftware.com/bugzilla/show_bug.cgi?id=1109
  for details

11/09/2006
namespace
- Fixed unnecessary warnings, see http://zerowing.idsoftware.com/bugzilla/show_bug.cgi?id=1108
  for details

11/09/2006
namespace
- Added sunplug (Mapcoordinator-plugin for ET) by Topsun
  ET only: setting mapcoordsmins and mapcoordsmaxs in the worldspawn
  Tester: Shaderman
- Added brushexport Plugin by namespace
  Exports selected brushes as wavefront object.
  Tester: Shaderman

11/09/2006
namespace
- Fixed compile error on x86_64, see http://zerowing.idsoftware.com/bugzilla/show_bug.cgi?id=1105
  for details.

09/09/2996
namespace
- Added strafing for the camerawindow while holding ctrl